# tgv-market-research

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION_SETUP.md  CODE_REVIEW_UPDATED.md  COMPREHENSIVE_CODE_REVIEW.md  COMPREHENSIVE_CODE_REVIEW_2025.md  Makefile  README.md  cloudbuild.yaml  create_sample_survey.py  create_survey_multiple_media_example.py  create_survey_with_media_example.py  create_survey_with_routing_example.py  create_user.py  deploy.sh  docker-compose-frontend-only.yml  docker-compose.yml  notes  setup-database.sh  setup-new-gcp-project.sh  setup-secrets.sh  start.sh  switch-to-tgv-account.sh
backend/: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  POETRY_MIGRATION_SUMMARY.md  PRODUCTION_READINESS_OCT_21_2025_FINAL.md  QUICK_REFERENCE.md  README.md  RESTRUCTURE_PLAN.md  alembic.ini  create_admin.py  create_sample_survey_local.py  database.py  docker-compose.yml  docker-entrypoint.sh  gcp_storage.py  gemini_labeling.py  main.py  media_crud.py  media_schemas.py  models.py  pyproject.toml  pytest.ini  reporting_crud.py  reporting_schemas.py  requirements-test.txt  requirements.txt  run_tests.sh  secrets_manager.py  settings_crud.py  settings_models.py  settings_schemas.py  survey_crud.py  survey_models.py  survey_schemas.py
backend/.legacy_backup_20251020/: crud.py  crud_base.py  dependencies.py  gcp_ai_analysis.py  gemini_labeling.py  main.py  media_crud.py  media_models.py  reporting_crud.py  survey_crud.py  survey_models.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_survey_tables.py  003_add_media_table.py  003_add_reporting_labels.py  004_add_age_column.py  005_add_settings_tables.py  006_make_approval_nullable.py  007_add_client_to_surveys.py  04bb2e4a7922_add_question_id_to_responses.py  05df0306ab3d_add_account_lockout_fields.py  1e3c7b4af839_add_performance_indexes.py  45e5f4f62889_add_performance_indexes.py  54dc448698fe_add_user_authentication_fields.py  b0eb64c79e16_add_indexes_to_foreign_keys.py  d343b386aeac_add_external_user_id_to_submissions_and_.py  e8213a8b0e49_add_composite_indexes_for_query_.py  f3fcb7ec435e_add_taxonomy_tables.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py  auth.py  health.py  media.py  reporting.py  router.py  settings.py  submissions.py  surveys.py  taxonomy.py  users.py
backend/app/core/: __init__.py  auth.py  constants.py  csrf.py  database.py  db_types.py  error_handlers.py  rate_limits.py
backend/app/crud/: __init__.py  media.py  reporting.py  settings.py  survey.py  taxonomy.py  user.py
backend/app/integrations/gcp/: gemini.py  secrets.py  storage.py
backend/app/models/: __init__.py  media.py  settings.py  survey.py  taxonomy.py  user.py
backend/app/schemas/: __init__.py  media.py  survey.py  taxonomy.py  user.py
backend/app/services/: media_analysis.py  media_proxy.py  routing_service.py
backend/app/utils/: __init__.py  charts.py  logging.py  queries.py  routing.py  routing_refactored.py  sql_helpers.py  validation.py
backend/scripts/: update_imports.py  update_test_imports.py
backend/services/: __init__.py  media_analysis_service.py  media_proxy_service.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth_security.py  test_auth_session.py  test_chart_utils.py  test_crud_base.py  test_csrf.py  test_dependencies.py  test_json_utils.py  test_logging_utils.py  test_n_plus_one_queries.py  test_query_helpers.py  test_question_media.py  test_routing.py  test_validation.py
backend/tests/api/: conftest.py  test_auth_api.py  test_routing_api.py  test_routing_api_simple.py  test_surveys_api.py
backend/tests/integrations/gcp/: test_gemini.py
backend/tests/services/: test_media_analysis.py  test_media_proxy.py
backend/utils/: __init__.py  json_utils.py  query_helpers.py
claude_docs/: API_ROUTER_REFACTOR_SUMMARY.md  AUTHENTICATION.md  AUTH_SUMMARY.md  BACKEND_CODE_REVIEW_REPORT.md  CODE_REVIEW_2025.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_FIXES_SUMMARY.md  COMPREHENSIVE_CODE_REVIEW_FOLLOW_UP_2025.md  COMPREHENSIVE_CODE_REVIEW_REPORT_2025.md  CRITICAL_FIXES_SUMMARY.md  CRUD_BASE_REFACTOR_SUMMARY.md  DATABASE_BACKUP_STRATEGY.md  DEPENDENCY_REFACTOR_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_DIFFERENT_ACCOUNT.md  DEPLOYMENT_NEW_PROJECT.md  DEPLOYMENT_QUICK_START.md  DOCKER_SETUP.md  FIXES_APPLIED_OCT_21_2025.md  IMPROVEMENTS_DASHBOARD.md  LEGACY_CLEANUP_SUMMARY.md  MAKEFILE_GUIDE.md  MAKEFILE_SUMMARY.md  MEDIA_TEST_SUMMARY.md  MEDIUM_PRIORITY_FIXES_OCT_21_2025.md  MONITORING_OBSERVABILITY.md  POETRY_MIGRATION.md  POETRY_SETUP.md  QUESTION_MEDIA_GUIDE.md  QUICK_DEPLOY.md  QUICK_REFERENCE.md  QUICK_START_AUTH.md  REFACTORING_SUMMARY.md  RESTRUCTURE_COMPLETE.md  REVIEW_SUMMARY_OCT_21_2025.md  ROUTING_IMPLEMENTATION_SUMMARY.md  ROUTING_QUICK_REFERENCE.md  ROUTING_TESTING_SUMMARY.md  SECURITY_CLEANUP_STEPS.md  SURVEY_ROUTING_GUIDE.md  (+3 more)
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.simple  FRONTEND_CODE_REVIEW.md  REFACTOR_SUMMARY.md  TESTING.md  cloudbuild.yaml  eslint.config.mjs  jest.config.js  jest.setup.js  migrate_taxonomies.sh  next.config.ts  package-lock.json  package.json  replace_console.sh
frontend/e2e/: auth-flow.spec.ts  survey-flow.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: MediaGallery.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/report/: layout.tsx  page.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/common/: EmptyState.tsx  ErrorState.tsx  LoadingState.tsx  index.ts
frontend/src/components/error/: ComponentErrorBoundary.tsx  ErrorBoundary.tsx  RouteErrorBoundary.tsx  index.ts
frontend/src/components/loading/: LoadingCard.tsx  LoadingPage.tsx  index.ts  (+2 more)
frontend/src/config/: api.ts  constants.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: index.ts  useApi.ts  useAsyncAction.ts  useErrorHandler.ts  useMediaGallery.ts  useSurvey.ts
frontend/src/lib/: logger.ts
frontend/src/types/: index.ts  media.ts  reporting.ts  survey.ts  taxonomy.ts
(+60 files in other folders)
